--- a/app/views/courses/shopping_cart_list.html.erb
+++ b/app/views/courses/shopping_cart_list.html.erb
@@ -1,5 +1,5 @@
 
-<% if @table_type=="cart" %>
+<% if @table_type=="sidebar" %>
 
 
 	<div class="bs-callout bs-callout-info ">
@@ -37,19 +37,14 @@
 							<% course.ch_name %>
 							<%= course.department.ch_name %>
 							<%= teacher.name %>
-							<% if @table_type=="search" %>
-							<button class="btn btn-success btn-circle pull-right" onclick="add_class(<%=cd.id%>,'add','search')">
-							<span class="glyphicon glyphicon-plus"></span>
-							</button>
-							<% elsif @table_type=="cart" %>
-							<button class="btn btn-danger btn-circle pull-right" onclick="add_to_cart(<%=cd.id%>,'delete')">
-								<span class="glyphicon glyphicon-minus"></span>
-							</button>
-							
+							<% if @table_type!="sidebar" %>
+								<button class="btn btn-success btn-circle pull-right" onclick="add_class(<%=cd.id%>,'add','cart')">
+								<span class="glyphicon glyphicon-plus"></span>
+								</button>
 							<% else %>
-							<button class="btn btn-danger btn-circle pull-right" style="z-index:100" onclick="add_class(<%=cd.id%>,'delete')">
-								<span class="glyphicon glyphicon-minus"></span>
-							</button>
+								<button class="btn btn-danger btn-circle pull-right" onclick="add_to_cart(<%=cd.id%>,'delete')">
+									<span class="glyphicon glyphicon-minus"></span>
+								</button>
 							<% end %>
 						</p>
 						<p class="text-right">
@@ -88,12 +83,6 @@
 
 
 <script>
-
-$(document).ready(function($) {
-	/*$(".clickable-row").click(function() {
-				window.document.location = $(this).attr("href");
-	});*/
-});
 
 
 </script>
