--- a/app/views/courses/srch_and_schd.html.erb
+++ b/app/views/courses/srch_and_schd.html.erb
@@ -8,7 +8,9 @@
 			<ul class="nav nav-tabs" style="margin-top:50px;">
 				<li class="active"><a href="#a" data-toggle="tab" >查詢</a></li>
 				<li><a href="#b" data-toggle="tab">已選</a></li>
-
+				<% if @sem_id==latest_semester.id %>
+				<li><a href="#c" data-toggle="tab">觀察名單</a></li>
+				<% end %>
 			</ul>
 			
 			<!--<div class="container">-->
@@ -35,7 +37,18 @@
 						</div>
 					</div>
 				</div>
-
+				
+				<div class="tab-pane" id="c">
+					<div class="panel panel-primary" >
+						<div class="panel-heading" >
+							<h4 class="text-center">觀察名單</h4>
+						</div>
+						<div class="panel-body" style="min-height:400px;">
+							<div id="shopping_cart_courses"></div>
+						</div>
+					</div>
+				</div>
+				
 			</div>
 
 		</div>
@@ -52,8 +65,87 @@ $(document).ready(function(){
 		$("#has_seleted_courses").load("/courses/get_user_courses?sem_id=<%=@sem_id%>&type=list");
 		$("#user_schedule").load("/courses/get_user_courses?sem_id=<%=@sem_id%>&type=schd");
 	<% end %>
-	
+	<% if @sem_id==latest_semester.id %>
+	$("#shopping_cart_courses").load("/courses/show_cart");
+	<% end %>
 });
 
+	
+	function add_class(id,addordel,from){
+		//alert("!!!");
+		var this_row=$("#cd_"+id);
+		var name=this_row.find(".course_name").text();
+		var time=this_row.find(".course_time").text();
+		if(time==" "){//for 藝文賞析
+			save_course(id,addordel);
+			if(addordel=="add")
+				this_row.remove();
+			return;
+		}
+		var timearr=time.match(/[0-9][A-Z]+/g);
+		
+		var slot_ids=[];
+		var conflict=false;
+		for(var i = 0 ; i < timearr.length ; i++){
+			var day=timearr[i][0];
+			
+			for(var j = 1 ; j < timearr[i].length ; j++){
+				
+				var row_id="#day_"+day+"_time_"+timearr[i][j];
+				slot_ids.push(row_id);
+				if(addordel=="add"&&$(row_id).text()!=""){
+					$(row_id).removeClass("schedule-slot-empty");
+					//$(row_id).addClass("danger");
+					$(row_id).css("background-color","#FFCECD");
+					conflict=true;
+				}
+			}
+		}
+		if(conflict){
+			alert("衝堂囉!");
+		}
+		else{
+			for(var i = 0 ; i < slot_ids.length;i++){
+				if(addordel=="add"){
+					$(slot_ids[i]).text(name);
+					$(".danger").removeClass("danger");
+				}
+				else{
+					$(slot_ids[i]).text("");
+					$(slot_ids[i]).attr("class","schedule-slot-empty");
+					
+					//$(slot_ids[i]).css("background-color","");
+					//$(row_id).addClass("danger");
+				}
+			}
+			save_course(id,addordel,from);
+			if(addordel=="add")
+				this_row.remove();
+		}
+	}
+	
+	function save_course(cd_id,addordel,from){
+		$.ajax({
+			type: "GET",
+			url: "/courses/add_simulated_course",
+			data: {
+				cd_id: cd_id,
+				type: addordel,
+				sem_id: <%=@sem_id%>,
+				from :from
+			},
+			success: function(data) {
+				//if(type=="add")
+				$("#has_seleted_courses").html('<%=loading_img%>');
+				$("#has_seleted_courses").load("/courses/get_user_courses?sem_id=<%=@sem_id%>&type=list");
+				$("#user_schedule").load("/courses/get_user_courses?sem_id=<%=@sem_id%>&type=schd");
+				if (from=="cart")
+					$("#shopping_cart_courses").load("/courses/show_cart");
+				//alert("SUCCESS");
+			}
+			
+		});
+	}
 
+	
 </script>
