--- a/app/assets/stylesheets/layout.css
+++ b/app/assets/stylesheets/layout.css
@@ -117,6 +117,10 @@ background-color: black  ;
 	color: green;
 }
 
+.crown-color{
+	fill: #94d31b;
+}
+
 #rank-icon{
 //	position: absolution ;	
 }
