--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -2,12 +2,9 @@
 
 <div class="row">
 	<div class="col-md-7">
-		<h1>
-		<%= @course.ch_name %>－<%=@teacher_show.name%> 
-		<small>
-			<span class="label label-<%=rankTag(@target_rank)%>" id="rank-icon"><%=@target_rank.to_s%>
-			</span>
-		</small>
+		<h1>	
+	<!-- <span class="label label-<%=rankTag(@target_rank)%>" id="rank-icon"><%=@target_rank.to_s%> -->	
+		<%= @course.ch_name %>－<small style="position: absolute;margin-top: -20px;margin-left: -10px;"><%=image_tag "crown.svg", :class=>"crown-color"%></small></span><%=@teacher_show.name%>
 		</h1>
 	</div>
 	<div class="col-md-5" id="teacher-name">
