--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
   
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   
-  <% javascript_include_tag "#{params[:controller]}" %>
+  <%= javascript_include_tag "#{params[:controller]}" %>
 <!-- <script src='https://www.google.com/jsapi'></script>  -->
 
   <%= csrf_meta_tags %>
