--- a/app/views/courses/shopping_cart_list.html.erb
+++ b/app/views/courses/shopping_cart_list.html.erb
@@ -4,7 +4,7 @@
 
 	<div class="bs-callout bs-callout-info ">
 		<!--<h4></h4>-->
-		<p>此為觀察名單，並不會加入課表，若要加至課表請至模擬選課排課</p>
+		<p>此為觀察名單，並不會加入課表，若要加入課表請至<%=link_to'課程地圖', "/courses/simulation"%>排課</p>
 		<p></p>
 	</div>
 
