--- a/app/assets/stylesheets/layout.css
+++ b/app/assets/stylesheets/layout.css
@@ -23,12 +23,25 @@ body
 .no-padding-right{
 	padding-right:0px;
 }
+.no-padding-top{
+	padding-top:0px;
+}
+.no-padding-bottom{
+	padding-bottom:0px;
+}
 
 .no-margin-left{
 	margin-left:0px;
 }
-.no-padding-right{
-	padding-right:0px;
+.no-margin-right{
+	margin-right:0px;
+}
+
+.no-margin-top{
+	margin-top:0px;
+}
+.no-margin-bottom{
+	margin-bottom:0px;
 }
 
 textcontent{
