--- a/app/views/courses/_show_teacherOnCourse.html.erb
+++ b/app/views/courses/_show_teacherOnCourse.html.erb
@@ -76,11 +76,7 @@
 			</p>	
 		</h2>	
 	</div>
-<!--	
-	<div class="panel-body" id="chart">
-		<%=loading_img%>
-    </div>
--->      
+    
 	<canvas id="myChart" width="600" height="300"></canvas>
 <!-- course's content and tick -->    
     <div class="panel-heading">
@@ -171,49 +167,20 @@
 </div>
 
 <script>
-
+	
 	$(document).ready(function(){
-	//	$('#chart').load('/courses/course_raider?ct_id=<%=j courseTeacher.id.to_s %>&type=5');
-	/*
 		$.ajax({
-   		 type: "GET",
+   		 	type: "GET",
+   		 	dataType: "script",
     		url: '/courses/course_raider?ct_id=<%=j courseTeacher.id.to_s %>&type=5',
-    		success: function(json) {
-   		   		var foo = $.parseJSON(json);
-   		   		alert("text success");
-   		   		alert(foo);
-    		}
-  		});
-  	*/
-  	var data = {
-    labels: ["January", "February", "March", "April", "May", "June", "July"],
-    datasets: [
-        {
-            label: "My First dataset",
-            fillColor: "rgba(220,220,220,0.5)",
-            strokeColor: "rgba(220,220,220,0.8)",
-            highlightFill: "rgba(220,220,220,0.75)",
-            highlightStroke: "rgba(220,220,220,1)",
-            data: [65, 59, 80, 81, 56, 55, 40]
-        },
-        {
-            label: "My Second dataset",
-            fillColor: "rgba(151,187,205,0.5)",
-            strokeColor: "rgba(151,187,205,0.8)",
-            highlightFill: "rgba(151,187,205,0.75)",
-            highlightStroke: "rgba(151,187,205,1)",
-            data: [28, 48, 40, 19, 86, 27, 90]
-        }
-    ]
-};
-var ctx = $("#myChart").get(0).getContext("2d");
-var myBarChart = new Chart(ctx).Bar(data);	
-  		
+    		success: function(res) {}
+  		});		
 	    $('#course_content_head').load('/courses/course_raider?ct_id=<%=j courseTeacher.id.to_s %>&type=1') ;
 		$('#course_content_list').load('/courses/course_raider?ct_id=<%=j courseTeacher.id.to_s %>&type=2') ;
 		$('#head_form').hide() ;
 		$('#head_list').hide() ;
 	});
+	
 	function loadForm(id, link, type){
 		var get_type = 3 ; 
 		if(type=="list")
