crown svg color

--- a/app/assets/stylesheets/layout.css
+++ b/app/assets/stylesheets/layout.css
@@ -23,25 +23,12 @@ body
 .no-padding-right{
 	padding-right:0px;
 }
-.no-padding-top{
-	padding-top:0px;
-}
-.no-padding-bottom{
-	padding-bottom:0px;
-}
 
 .no-margin-left{
 	margin-left:0px;
 }
-.no-margin-right{
-	margin-right:0px;
-}
-
-.no-margin-top{
-	margin-top:0px;
-}
-.no-margin-bottom{
-	margin-bottom:0px;
+.no-padding-right{
+	padding-right:0px;
 }
 
 textcontent{
@@ -138,10 +125,6 @@ background-color: black  ;
 }
 .text-color-green{
 	color: green;
-}
-
-.crown-color{
-	fill: #ff0000;
 }
 
 #rank-icon{
