--- a/app/views/discusses/show_discussion.html.erb
+++ b/app/views/discusses/show_discussion.html.erb
@@ -18,7 +18,9 @@
 	<div class="panel panel-default bs-callout-success" id="discuss_<%=discuss.id%>" style="border-left-width:5px;">
 		<div class="panel-heading row no-margin-left" >
 			<div class="col-md-1">
+			<a href="https://www.facebook.com/<%=discuss.user.uid%>" target="_blank" class="masterTooltip" title="<%=discuss.user.name%>">
 			<%= image_tag "http://graph.facebook.com/"<<discuss.user.uid<<"/picture", size: "50x50", class:"", style:"margin-top:10px;"  %>
+			</a>
 			</div>
 			<div class="col-md-6" id="main_title_<%=discuss.id%>">
 			<h4 id="title_<%=discuss.id%>" ><%=discuss.title%></h4>
@@ -51,10 +53,10 @@
 		<div class="panel-body row">
 			<div class="col-md-12" id="main_content_<%=discuss.id%>">
 			<textcontent id="content_<%=discuss.id%>"><%=discuss.content%></textcontent>
-			<p class="text-right">
+			<p class="text-right" >
 				<%=link_to "回覆","javascript:void(0);" , onclick:"show_sub_form(#{discuss.id})", id:"reply_but_#{discuss.id}" %>
 				<% if current_user && discuss.user==current_user %>
-					<%=link_to "修改","javascript:void(0);", onclick:"edit(#{discuss.id})", id:"edit_but_#{discuss.id}" %>
+					<%=link_to "修改","javascript:void(0);", onclick:"edit(#{discuss.id},'main')", id:"edit_but_#{discuss.id}" %>
 				<% end %>
 			</p>
 			</div>
@@ -63,12 +65,19 @@
 			<% discuss.sub_discusses.each do |sub_d| %>
 				<div class="sub-discussion col-md-offset-1 col-md-11" >
 					<div class="col-md-1">
-						<%= image_tag "http://graph.facebook.com/"<<sub_d.user.uid<<"/picture", size: "45x45", class:"", style:"margin-top:10px;"  %>
+						<a href="https://www.facebook.com/<%=sub_d.user.uid%>" target="_blank" class="masterTooltip" title="<%=sub_d.user.name%>">
+							<%= image_tag "http://graph.facebook.com/"<<sub_d.user.uid<<"/picture", size: "45x45", class:"", style:"margin-top:10px;"  %>
+						</a>
 						<br>
 					</div>
-						<div class="col-md-8 ">
+						<div class="col-md-8 " id="sub_content_<%=sub_d.id%>">
 							<p><%=sub_d.updated_at.strftime("%Y/%m/%d %H:%M")%></p>
-							<textcontent ><%=sub_d.content%></textcontent>
+							<textcontent id="sub_content_<%=sub_d.id%>"><%=sub_d.content%></textcontent>
+							<p class="text-right pull-right" style="display:inline-block">
+							<% if current_user && sub_d.user==current_user %>
+								<%=link_to "修改","javascript:void(0);", onclick:"edit(#{sub_d.id},'sub')", id:"edit_sub_but_#{sub_d.id}" %>
+							<% end %>
+							</p>
 						</div>
 						<div class="col-md-3">
 							<p class="text-righ">
@@ -86,6 +95,9 @@
 								<%= fa_icon "thumbs-o-down 2x", title:"噓" %>
 							<% end %>
 							<span class="like-count dislike" id="sub_dislike_<%=sub_d.id%>"><%=sub_d.dislikes%></span>
+							
+							
+							
 							</p>
 						</div>
 				</div>
@@ -178,44 +190,65 @@
 		});
 
 	}
-	function edit(id){
+	function edit_sub(id){
 		
-		title=$("#main_title_"+id);
-		title_h4=title.find("h4");
-
-		var title_input='<input type="text" class="form-control" id="title_edit_'+id+'" value="'+title_h4.text()+'" required>';
-		title_h4.hide();
-		title.find("p").hide();
-		title.append(title_input);
 		
-		content=$("#main_content_"+id);
+		content=$("#sub_content_"+id);
 		content_text=content.find("textcontent");
-		var content_input='<textarea class="form-control" rows="5" id="content_edit_'+id+'" required>'+content_text.text()+'</textarea>';
-		var but_submit='<p class="text-right"><button class="btn btn-primary" onclick="send_edit('+id+')">送出</button>  ';
-		var but_cancel='<button class="btn btn-danger" onclick="cancel('+id+')">取消</button></p>';
+		var content_input='<textarea class="form-control" rows="5" id="content_edit_sub_'+id+'" required>'+content_text.text()+'</textarea>';
+		var but_submit='<p class="text-right"><button class="btn btn-primary" onclick="send_edit('+id+',\'sub\')">送出</button>  ';
+		var but_cancel='<button class="btn btn-danger" onclick="cancel('+id+',\'sub\')">取消</button></p>';
 		content.append(content_input+but_submit+but_cancel);
 		content_text.hide();
-		$("#edit_but_"+id).hide();
-		$("#reply_but_"+id).hide();
-		//alert(content);
+		$("#edit_sub_but_"+id).hide();
+
 	}
-	function cancel(id){
-		title=$("#main_title_"+id);
-		title.find("h4").show();
-		title.find("p").show();
-		title.find("input").hide();
-		content=$("#main_content_"+id);
+	
+	function edit(id,type){
+		
+		if(type=="main"){
+			title=$("#main_title_"+id);
+			title_h4=title.find("h4");
+
+			var title_input='<input type="text" class="form-control" id="title_edit_'+id+'" value="'+title_h4.text()+'" required>';
+			title_h4.hide();
+			title.find("p").hide();
+			title.append(title_input);
+			$("#reply_but_"+id).hide();
+		}
+		content=$("#"+type+"_content_"+id);
+		content_text=content.find("textcontent");
+		var content_input='<textarea class="form-control" rows="5" id="content_edit_'+type+'_'+id+'" required>'+content_text.text()+'</textarea>';
+		var but_submit='<p class="text-right"><button class="btn btn-primary" onclick="send_edit('+id+",'"+type+'\')">送出</button>  ';
+		var but_cancel='<button class="btn btn-danger" onclick="cancel('+id+",'"+type+'\')">取消</button></p>';
+		content.append(content_input+but_submit+but_cancel);
+		content_text.hide();
+		
+		$("#edit_"+type+"_but_"+id).hide();
+
+	}
+
+	function cancel(id,type){
+		if (type=="main"){
+			title=$("#main_title_"+id);
+			title.find("h4").show();
+			title.find("p").show();
+			title.find("input").hide();
+			$("#reply_but_"+id).show();
+		}
+		content=$("#"+type+"_content_"+id);
 		content.find("textarea").hide();
 		content.find("button").hide();
 		content.find("textcontent").show();
-		$("#edit_but_"+id).show();
-		$("#reply_but_"+id).show();
+		$("#edit_"+type+"_but_"+id).show();
+		
+		
 	}
-	function send_edit(id){
+	function send_edit(id,type){
 		//alert("!!!");
 		var title=$("#title_edit_"+id);
-		var content=$("#content_edit_"+id);
-		if(title.val()==''){
+		var content=$("#content_edit_"+type+"_"+id);
+		if(type=="main"&&title.val()==''){
 			title.focus();
 			return;
 		}
@@ -227,9 +260,11 @@
 		$("#result").load(
 			"/discusses/update_discuss",{
 				ct_id : <%=@ct_id%>,
+				type :type,
 				discuss_id: id,
 				title : title.val(),
-				content : content.val()
+				content : content.val(),
+				
 			}
 		);
 	}
