--- a/app/views/courses/_show_teacherOnCourse.html.erb
+++ b/app/views/courses/_show_teacherOnCourse.html.erb
@@ -1,7 +1,8 @@
 <% courseTeacher = CourseTeachership.where(:course_id=>params[:id], :teacher_id=>@teacher_show.id).first %>
 <% cd=courseTeacher.course_details.last %>
 <% page = CourseContentHead.where(:course_teachership_id => courseTeacher.id).first.presence || nil%>
-<script src="/assets/Chart.min.js"></script>
+<script src="/assets/highcharts-custom.js"></script> 
+
 <div class="well bs-callout bs-callout-<%=rankTagBar(@target_rank)%>">
 
 <!-- course's teacher and department -->
@@ -76,8 +77,7 @@
 			</p>	
 		</h2>	
 	</div>
-    
-	<canvas id="myChart" width="600" height="300"></canvas>
+	<div id="container" style="height: 400px; width: 600px;"></div>
 <!-- course's content and tick -->    
     <div class="panel-heading">
 		<h2 class="panel-title">
@@ -168,17 +168,18 @@
 
 <script>
 	
-	$(document).ready(function(){
+	$(document).ready(function(){	
 		$.ajax({
    		 	type: "GET",
    		 	dataType: "script",
     		url: '/courses/course_raider?ct_id=<%=j courseTeacher.id.to_s %>&type=5',
-    		success: function(res) {}
+    		error: function(res){alert("Some error happened :( ");}
   		});		
 	    $('#course_content_head').load('/courses/course_raider?ct_id=<%=j courseTeacher.id.to_s %>&type=1') ;
 		$('#course_content_list').load('/courses/course_raider?ct_id=<%=j courseTeacher.id.to_s %>&type=2') ;
 		$('#head_form').hide() ;
 		$('#head_list').hide() ;
+	
 	});
 	
 	function loadForm(id, link, type){
