--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<!--<link rel="shortcut icon" href="/favicon.ico" />-->
   <title>NCTU+</title>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   
@@ -10,19 +11,14 @@
 <!-- <script src='https://www.google.com/jsapi'></script>  -->
 
   <%= csrf_meta_tags %>
+	<meta property="og:title" content="NCTU+" />
+  <meta property="og:type" content="website" />
 	
-	
+	<meta property="fb:app_id" content="309270975792981" />
 </head>
 
-<body onload="">
-<div id="fb-root"></div>
-<script>(function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0];
-  if (d.getElementById(id)) return;
-  js = d.createElement(s); js.id = id;
-  js.src = "//connect.facebook.net/zh_TW/sdk.js#xfbml=1&appId=309270975792981&version=v2.0";
-  fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script>
+<body>
+
 <%= image_tag("head_1.jpg", :id=>'bg1', :class=>"bg")%>
 
 
