--- a/app/views/user/_this_semester.html.erb
+++ b/app/views/user/_this_semester.html.erb
@@ -8,7 +8,10 @@
 			<%= render :partial=> "/user/dept_form"%>
 			<h4 id="user_info" class="text-center">
 				<% unless current_user.department.nil? %>
-				<%=current_user.department.ch_name%> <%=current_user.grade.name%> 畢業學分:<strong><%=current_user.department.credit %></strong>			
+				<%=current_user.department.ch_name%> <%=current_user.grade.name%> 
+					<% unless current_user.department.credit.nil? %>
+					畢業學分:<strong><%=current_user.department.credit %></strong>	
+					<% end %>
 				<% end %>
 			</h4>
 		</div>
